--- a/src/OclSolver/OclSolver.csproj
+++ b/src/OclSolver/OclSolver.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -15,17 +15,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="kernel.cl" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Compile Include="..\CudaSolver\Comms.cs" Link="Comms.cs" />
     <Compile Include="..\CudaSolver\CycleFinder.cs" Link="CycleFinder.cs" />
     <Compile Include="..\CudaSolver\Logger.cs" Link="Logger.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="kernel.cl" />
+    <EmbeddedResource Include="kernel.c" />
   </ItemGroup>
 
   <ItemGroup>
